chore(Content): header
responsibe styling

collapses to block-level on mobil [ci skip]

--- a/content/enterprise-ux/raise-your-bottom-line/index.jade
+++ b/content/enterprise-ux/raise-your-bottom-line/index.jade
@@ -1,8 +1,11 @@
 ---
-title: Dog
+title: Raise your bottom line
 date: 2016-03-22 11:55:57
 ---
 
 div
     a(href="../") < Enterprise UX
     p Hello!
+
+    p.
+        Stuff & things here. Such read, much interest.
