--- a/themes/beryllium/layout/_partial/site/footer.jade
+++ b/themes/beryllium/layout/_partial/site/footer.jade
@@ -10,7 +10,7 @@ footer
 
     .max-width-3.mx-auto
         .clearfix
-            .col.col-12.px2.center.mb2
+            small.col.col-12.px2.mb2
                 ul.list-reset
                     li.inline-block.mr2 Minor
                     li.inline-block.mr2 Something here
