--- a/themes/beryllium/layout/_partial/site/menu.jade
+++ b/themes/beryllium/layout/_partial/site/menu.jade
@@ -9,5 +9,5 @@ ul.list-reset
         a(href=url_for("blog")) Blog
     li.inline-block.mr2
         a(href=url_for("join-us")) Join us
-    li.inline-block.mr2
+    li.inline-block
         a(href=theme.rss ? theme.rss : config.root + "rss2.xml") Feed
