--- a/themes/beryllium/layout/post.jade
+++ b/themes/beryllium/layout/post.jade
@@ -1,20 +1,26 @@
 extends base
+include _partial/post/meta
 
 block site_body
     include _partial/post/entry_pagination
 
     .clearfix
         .col.col-12.px2
-            h1.h1.my4= page.title
+            if page.seo_title
+                h1.mt4= page.seo_title
+            else
+                h1.mt4= page.title
 
-            include _partial/post/meta
-            +postDate(page.date)
-            +postCategory(page.categories)
+            if page.subtitle
+                p.lead.mb4= page.subtitle
 
         .sm-col.sm-col-12.md-col-8.px2
             div!= page.more
 
         .sm-col.sm-col-12.md-col-4.px2
+            +postDate(page.date)
+            +postCategory(page.categories)
+
             p.
                 consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
                 cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
