--- a/themes/beryllium/layout/views/home.jade
+++ b/themes/beryllium/layout/views/home.jade
@@ -11,7 +11,7 @@ block site_body
             more text here. something really interested too. I have a special class so I
             span the full width.
 
-    .col.col-12.px2.mb4
+    .col.col-12.px2
         p.inline-block.mr2 On this page:
             ol.list-reset.inline
                 li.inline-block.mr2
@@ -26,8 +26,8 @@ block site_body
                     a(href="#blog") Recent blog posts
 
 
-    section.col.col-12.px2.mb4
-        h2#enterprise-ux Enterprise UX
+    section.col.col-12.px2
+        h2.pt4#enterprise-ux Enterprise UX
         p.
             All things Enterprise UX solutions. Lorem ipsum dolor sit amet, consectetur adipiscing
             elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
@@ -40,22 +40,23 @@ block site_body
                     p.mb0.lead People-centered design that boosts your bottomline.
 
             .sm-col.sm-col-12.md-col-6.p1
-                a(href=url_for('/enterprise-ux')).border-box.border.rounded.p3.block
+                a(href=url_for('/enterprise-ux/raise-your-bottom-line')).border-box.border.rounded.p3.block
                     h3.h2.m0 Invest in the systems that give you the&nbsp;
                         i competitive edge
                     p.mb0 Doing things for business
 
             .sm-col.sm-col-12.md-col-6.p1
-                a(href=url_for('/enterprise-ux')).border-box.border.rounded.p3.block
-                    h3.h2.m0 Calculating the&nbsp;
+                a(href=url_for('/enterprise-ux/raise-your-bottom-line')).border-box.border.rounded.p3.block
+                    h3.h2.m0 Calculate the&nbsp;
                         i ROI
                         | &nbsp;of your internal systems
                     p.mb0 Doing things for business
 
-    section.col.col-12.px2.mb4
-        h2#projects Typical projects
+
+    section.col.col-12.px2
+        h2.pt4#projects Typical projects
         p.
-            Various projects. Lorem ipsum dolor sit amet, consectetur adipiscing
+            Various projects #[a(href="/work") our work] dolor sit amet, consectetur adipiscing
             elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
             minim veniam.
 
@@ -75,15 +76,9 @@ block site_body
                     h3.h1.m0 Transforming the way people transform
                     p.mb0.lead Doing things for business and something else really cool.
 
-            .col.col-12.p1
-                a(href=url_for('/work/BBC-freebird')).border-box.border.rounded.px3.py4.block.xs-hide.sm-hide
-                    h3.h1.m0 Transforming the way people transform
-                    p.mb0.lead Doing things for business and something else really cool.
 
-
-
-    section.col.col-12.px2.mb4
-        h2#labs Labs
+    section.col.col-12.px2
+        h2.pt4#labs Labs
         p.
             Our #[a(href="/labs") labs projects] are like, amazing. Lorem ipsum dolor sit amet,
             consectetur adipiscin
@@ -99,8 +94,8 @@ block site_body
                         p.m0= project.subtitle
 
 
-    section.col.col-12.px2.mb4
-        h2#ventures Ventures
+    section.col.col-12.px2
+        h2.pt4#ventures Ventures
         p.
             Our own products & services. Our labs projects are like, amazing. Lorem ipsum dolor sit amet, consectetur adipiscin
             elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
@@ -124,7 +119,7 @@ block site_body
 
 
     section.col.col-12.px2.mb4
-        h2#blog Blog
+        h2.pt4#blog Blog
         p.
             Things we've written recently. Our labs projects are like, amazing. Lorem ipsum dolor sit amet,
             consectetur adipiscin elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
