--- a/themes/beryllium/layout/views/join-us.jade
+++ b/themes/beryllium/layout/views/join-us.jade
@@ -6,8 +6,8 @@ block site_body
 
         p.lead Join us content, innit.
 
-    .clearfix
-        .sm-col.sm-col-8.p2
+        section.my4
+
             h2 We're hiring
 
             p.
@@ -15,37 +15,31 @@ block site_body
                 text here. Something that shows how enthusiastic we are.
                 It's great really. You definitely join.
 
-
-            h3 Interaction designers
+            h3.mt3 Interaction designers
             p.
                 Paragraph here about the type of designer. There's a bunch of
                 jobs we're looking for. A bit more text here. Something that
                 shows how enthusiastic we are. It's great really. You definitely join.
+            a(href="#") Apply here &#10095;
 
-            h3 Information Architects
+            h3.mt3 Information Architects
             p.
                 Paragraph here about the type of designer. There's a bunch of
                 jobs we're looking for. A bit more text here. Something that
                 shows how enthusiastic we are. It's great really. You definitely join.
+            a(href="#") Apply here &#10095;
 
-            h3 User researchers
+            h3.mt3 User researchers
             p.
                 Paragraph here about the type of designer. There's a bunch of
                 jobs we're looking for. A bit more text here. Something that
                 shows how enthusiastic we are. It's great really. You definitely join.
+            a(href="#") Apply here &#10095;
 
-            h3 Frontend developers (FE)
+            h3.mt3 Frontend developers
             p.
                 Paragraph here about the type of designer. There's a bunch of
                 jobs we're looking for. A bit more text here. Something that
                 shows how enthusiastic we are. It's great really. You definitely join.
+            a(href="#") Apply here &#10095;
 
-        .sm-col.sm-col-4.p2
-            .border.p2.mb1
-                p Social things here
-
-            .border.p2.mb1
-                p Social things here
-
-            .border.p2.mb1
-                p Social things here
