chore(content): More styling
general styling

--- a/content/work/BBC-freebird/index.jade
+++ b/content/work/BBC-freebird/index.jade
@@ -1,6 +1,6 @@
 ---
 title: BBC Freebird
-seo_title: Article analysis with BBC Freebird R&D project
+long_title: Article analysis with BBC Freebird R&D project
 date: 2016-03-22 21:32:38
 description: SOmething about work here
 layout: views/project
