--- a/themes/beryllium/layout/page.jade
+++ b/themes/beryllium/layout/page.jade
@@ -2,6 +2,9 @@ extends base
 
 block site_body
     .col.col-12.p2
-        h1= page.title
+        if page.long_title
+            h1= page.long_title
+        else
+            h1= page.title
 
         div!= page.content
