--- a/themes/beryllium/layout/post.jade
+++ b/themes/beryllium/layout/post.jade
@@ -6,8 +6,8 @@ block site_body
 
     .clearfix
         .col.col-12.px2
-            if page.seo_title
-                h1.mt4= page.seo_title
+            if page.long_title
+                h1.mt4= page.long_title
             else
                 h1.mt4= page.title
 
