--- a/themes/beryllium/layout/views/project.jade
+++ b/themes/beryllium/layout/views/project.jade
@@ -2,6 +2,6 @@ extends ../base
 
 block site_body
     .col.col-12.p2
-        h1.h1= page.seo_title
+        h1.h1= page.long_title
 
         div!= page.content
