--- a/themes/beryllium/layout/views/home.jade
+++ b/themes/beryllium/layout/views/home.jade
@@ -4,7 +4,7 @@ extends ../base
 
 block site_body
     .col.col-12.px2.mt4.mb2
-        h1.h1= page.seo_title
+        h1.h1= page.long_title
 
         p.full-width.lead.
             Opportunity to write something here as the introduction to the whole page. lots
