--- a/themes/beryllium/layout/post.jade
+++ b/themes/beryllium/layout/post.jade
@@ -20,6 +20,7 @@ block site_body
         .sm-col.sm-col-12.md-col-4.px2
             +postDate(page.date)
             +postCategory(page.categories)
+            +postAuthor(page.author_email)
 
             p.
                 consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
